# burningskids

./: CMakeLists.txt  README.md  dquadtree.cpp  dquadtree.h  dtimelimiter.cpp  dtimelimiter.h  gameaudio.cpp  gameaudio.h  gameaudiotest.cpp  gamecampaign.cpp  gamecampaign.h  gamecampaigndefinition.cpp  gamecampaigndefinition.h  gamecar.cpp  gamecar.h  gamegraph.cpp  gamegraph.h  gamegraphic.cpp  gamegraphic.h  gamelevel.cpp  gamelevel.h  gamemenu.cpp  gamemenu.h  gameobject.cpp  gameobject.h  gameresourcemanager.cpp  gameresourcemanager.h  gameroad.cpp  gameroad.h  gamescript.cpp  gamescript.h  gamestructs.h  gametrack.cpp  gametrack.h  gameutils.cpp  gameutils.h  gamewidget.cpp  gamewidget.h  luaapi.cpp  luaapi.h  (+10 more)
config/: campaign.xml  settings.xml
dioengine/: dioengine.h
drenderer/: drenderer.cpp  drenderer.h
duserclient/: CMakeLists.txt  dboundingbox.cpp  dboundingbox.h  dglfbo.cpp  dglfbo.h  dglrendertarget.h  dglshader.cpp  dglshader.h  dparticle.cpp  dparticle.h  drendernode.cpp  drendernode.h  dresource.cpp  dresource.h  duserclient.cpp  duserclient.h  duserclientfreeglut.cpp  duserclientfreeglut.h  duserclientgeometry.cpp  duserclientgeometry.h  duserclientobject.cpp  duserclientobject.h  dutils.cpp  dutils.h  dvect.cpp  dvect.h  dvect3.cpp  dvect3.h
duserclient/test/: CMakeLists.txt  test.cpp
media/CubeCar/: car.xml
media/Van/: car.xml
media/beetle/: car.xml
media/car1/: car.xml
media/car1_rd/: car.xml
media/ferrari/: car.xml
media/hello_level/: level.lua  level.xml
media/hello_track/: track.xml
media/level1/: level.lua  level.xml
media/level2/: level.lua  level.xml
media/level_solo/: level.lua  level.xml
media/ramp1/: object.xml
media/rock/: object.xml
media/track1/: track.xml
media/track2/: track.xml  track.xml.usaj
media/tree1/: object.xml
menu/: button.lua  finish.lua  hud.lua  main.lua  select_car.lua  slider.lua  tweaker.lua
r2dengine/: CMakeLists.txt  r2dcar.cpp  r2dcar.h  r2dengine.cpp  r2dengine.h  r2dlerper.cpp  r2dlerper.h  r2dlib.cpp  r2dlib.h  r2dobject.cpp  r2dobject.h  r2dsim.cpp  r2dsim.h  r2dstructs.h  r2dsurface.h  r2dtyre.cpp  r2dtyre.h  r2dutils.h
script/: ai0.lua  race.lua  test.lua
shader/: base_frag.glsl  base_vert.glsl  bumps.glsl  distort.glsl  flat_shadow_frag.glsl  flat_shadow_vert.glsl  fxaa.glsl  lighting.glsl  lighting2.glsl  lighting_textured.glsl  lighting_textured2.glsl  shadow_frag.glsl  shadow_vert.glsl  splatting.glsl  text.glsl  texture_frag.glsl
